feat: create car specification
