# src/shared/infra/http/routes/specifications.routes.ts
@@ -1,0 +1,10 @@
+import { Router } from 'express';
+
+import { CreateSpecificationController } from '@modules/cars/useCases/createSpecification/CreateSpecificationController';
+
+const specificationsRouter = Router();
+const createSpecificationController = new CreateSpecificationController();
+
+specificationsRouter.post('/', createSpecificationController.handle);
+
+export { specificationsRouter };
